# recon

./: CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  clippy.toml  rustfmt.toml  tmux.conf
.claude/skills/roostr/: SKILL.md
.github/workflows/: ci.yml
ci/: check_file_length.sh
demo/: Dockerfile  demo.sh  record.sh
docs/: requirements.md  view-mode.md
scripts/: install-hooks.sh  pre-commit.sh
src/: app.rs  cli.rs  main.rs  model.rs  session.rs  setup.rs  state.rs  summarizer.rs  tmux.rs  view_lock.rs  view_ui.rs
src/app/: grid.rs  keys.rs  keys_actions.rs  keys_filter.rs  keys_normal.rs  keys_rename.rs  mod.rs  refresh.rs
src/runtime/: daemon.rs  dock.rs  dock_focus.rs  dock_info.rs  dock_toggle.rs  mod.rs  refresh.rs  tmux_helper.rs  toggle.rs  tui.rs
src/session/: discover.rs  git_info.rs  live.rs  mod.rs  resume.rs  status.rs
src/session/jsonl/: ansi.rs  marker.rs  mod.rs  prompts.rs
src/summarizer/: anthropic.rs  backend.rs  cache.rs  claude_cli.rs  mod.rs  ollama.rs  prompt.rs  runtime.rs  store.rs
src/view_ui/: animation.rs  card_grid.rs  character.rs  character_compact.rs  context_bar.rs  dock.rs  footer.rs  mod.rs  overlay.rs  palettes.rs  rooms.rs  rooms_view.rs  tests.rs  text.rs  types.rs
src/view_ui/sprites/: idle_data.rs  input_data.rs  mod.rs  new_data.rs  working_data.rs
tests/: e2e.sh
