[package]
name = "roostr"
version = "0.7.0"
edition = "2021"
authors = ["Marcos Kichel <marcos.kichel@gmail.com>"]
description = "tmux-native dashboard for managing Claude Code agents"
repository = "https://github.com/marcoskichel/roostr"
homepage = "https://github.com/marcoskichel/roostr"
license = "MIT"
readme = "README.md"
keywords = ["tmux", "claude", "tui", "dashboard", "ratatui"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json", "tls"], default-features = false }
libc = "0.2"
